--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -44,17 +44,34 @@ string is passed to the event handler function -->
     </label>
   </div>
 </div>
-      <!-- Email field element-->
-      <div class="form-group" [ngClass]="{'has-error': formErrors.email}">
-        <label class="col-sm-2 control-label" for="email">Email</label>
-        <div class="col-sm-8">
-          <input id="email" type="text" class="form-control"
-                 formControlName="email" (blur)="logValidationErrors()">
-          <span class="help-block" *ngIf="formErrors.email">
-            {{formErrors.email}}
-          </span>
-        </div>
-      </div>
+<div formGroupName="emailGroup">
+  <div class="form-group" [ngClass]="{'has-error': formErrors.email}">
+    <label class="col-sm-2 control-label" for="email">Email</label>
+    <div class="col-sm-8">
+      <input id="email" type="text" class="form-control"
+             formControlName="email" (blur)="logValidationErrors()">
+      <span class="help-block" *ngIf="formErrors.email">
+        {{formErrors.email}}
+      </span>
+    </div>
+  </div>
+
+  <div class="form-group" [ngClass]="{'has-error': formErrors.confirmEmail
+                                                || formErrors.emailGroup}">
+    <label class="col-sm-2 control-label" for="confirmEmail">
+      Confirm Email
+    </label>
+    <div class="col-sm-8">
+      <input id="confirmEmail" type="text" class="form-control"
+             formControlName="confirmEmail" (blur)="logValidationErrors()">
+      <span class="help-block"
+            *ngIf="formErrors.confirmEmail || formErrors.emailGroup">
+        {{formErrors.confirmEmail ? formErrors.confirmEmail
+          : formErrors.emailGroup}}
+      </span>
+    </div>
+  </div>
+</div>
 
       <!-- Phone input element -->
     <div class="form-group" [ngClass]="{'has-error': formErrors.phone}">
